tests/errors/syn_method27.java
public class syn_method27 {
public static void main ( ) {

}